# mrbawk

./: README.md  main.py  requirements.txt
10/: announcement.json  gamequestions.json  main.py  newserverannounce.json  pyproject.toml  requirements.txt
10.3/: announcement.json  currstats.json  gamequestions.json  main.py  newserverannounce.json  pyproject.toml
10.3/.upm/: store.json
10/.upm/: store.json
11/: keep_alive.py  main.py  newserverannounce.json  pyproject.toml  quotescount.json
11-github/: announcement.json  newserverannounce.json
2/: main.py  pyproject.toml
3.3/: main.py  memberlists.json  pyproject.toml  zbackup.json
4.2/: main.py  memberlists.json  preferences.json
5.3/: main.py  memberlists.json  newserverannounce.json  preferences.json  pyproject.toml  quotes.json  versionannounce.json
6.1/: main.py  memberlists.json  preferences.json  quotes.json  versionannounce.json
7/: currency.json  currstats.json  main.py  memberlists.json  newserverannounce.json  preferences.json  quotes.json  versionannounce.json
8.1/: announcement.json  currency.json  currstats.json  main.py  memberlists.json  newserverannounce.json  pyproject.toml  quotes.json
8.2/: announcement.json  currency.json  currstats.json  main.py  memberlists.json  preferences.json  quotes.json
9.1/: announcement.json  b_currency.json  currstats.json  main.py  memberlists.json  newserverannounce.json  preferences.json  pyproject.toml  quotes.json  requirements.txt
9.1/.upm/: store.json
9.2/: announcement.json  currstats.json  main.py  newserverannounce.json  pyproject.toml
(+19 files in other folders)
