[tool.poetry]
name = "mr-bawk-v1101"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
giphy-client = "^1.0.0"
psutil = "^5.7.0"
pymongo = "^3.10.1"
better-profanity = "^0.6.1"
dblpy = "^0.3.4"
discord = "^1.0.1"
flask = "^1.1.2"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
