[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mr-bawk"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Pillow = "^7.1"
PyNaCl = "^1.3"
git-client = "^0.2.1"
joblib = "^0.14.1"
opencv-python = "^4.2"
profanity-check = "^1.0"
psutil = "^5.7"
python = "^3.8"
pymongo = "^3.10"
dnspython = "^1.16"
better-profanity = "^0.6.1"
giphy_client = "^1.0"
dblpy = "^0.3.4"
"discord.py" = "^1.3.4"
[tool.poetry.dev-dependencies]
