[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mr-bawk"
version = "0.1.0"
[tool.poetry.dependencies]
"discord.py" = "^1.3"
python = "^3.7"
Flask = "^1.1"
profanity-check = "^1.0"
PyNaCl = "^1.3"
joblib = "^0.14.1"
opencv-python = "^4.2"
Pillow = "^7.1"
git-client = "^0.2.1"
psutil = "^5.7"
[tool.poetry.dev-dependencies]
